--- a/index..html
+++ b/index..html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="">Do’konlarimiz</a></li>
-            <li><a href="">Biz haqimizda</a></li>
-            <li><a href="">Bog’lanish</a></li>
+            <li><a href="nihoyat5/index.html">Do’konlarimiz</a></li>
+            <li><a href="nihoyat4/index.html">Biz haqimizda</a></li>
+            <li><a href="nihoyat6/index.html">Bog’lanish</a></li>
         </ul>
         <ul>
             <li><a href="">Call center:</a></li>
-             <li><a href="">+998 94 656-22-22</a></li>
+             <li> <a href="">+998 94 656-22-22</a></li>
         </ul>
     </header>
     <div class="contener">
@@ -23,13 +24,337 @@
             <img src="img/Group.png" alt="">
         </div>
         <form>
-            <input type="search">
+            <input type="search" placeholder="Mahsulotlarni qidirish" class="in">
         </form>
         <div class="register">
             <h3>Ru</h3>
-            <i class="fa-solid fa-bag-shopping"></i>
+              <a href="nihoyat2/index.html"><i class="fa-solid fa-bag-shopping"></i></a>
             <button>read more</button>
         </div>
     </div>
+    <div class="contener1">
+        <div class="box1">
+            <h2>BIZ SIZGA HAR QANDAY <br> MAHSULOTNI YETKAZAMIZ </h2>
+            <p>Turli xil oziq-ovqat mahsulotlarini “Inmart” supermarketi orqali tez <br> va sifatli buyurtma qilishingiz mumkin. Biz bilan birga bo’ling.</p>
+            <button>Buyurtma berish</button>
+        </div>
+        <div class="img-box">
+            <img src="img/Rectangle 5.png" alt="">
+        </div>
+    </div>
+    <div class="big-menu">
+        <button>Barchasi</button>
+        <button>Mevalar va sabzavotlar</button>
+        <button>Sut va sut mahsulotlari</button>
+        <button>Suv va ichimliklar</button>
+        <button>Suv va ichimliklar</button>
+        <button>Shirinliklar</button>
+    </div>
+    <div class="text">
+        <h2>TOP MAHSULOTLAR</h2>
+    </div>
+    <div class="contener2">
+        <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 7.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>15 000 so’m / dona</h2>
+                 <p>Nescafe Special</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 9.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>24 000 so’m / kg</h2>
+                 <p>Malayziya banan</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 11.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>32 000 so’m / kg</h2>
+                 <p>Alanga guruch</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 13.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>25 990 so’m / kg</h2>
+                 <p>Mosh</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+    </div>
+    <div class="text">
+        <h2>YANGILIKLAR</h2>
+    </div>
+    <div class="contener3">
+        <div class="cart2">
+            <div class="cart2-text">
+                <h2>Dena soklaridan 50 dona xarid qiling va 10% chegirmaga ega bo’ling.</h2>
+                <a href="">Batafsil</a>
+            </div>
+            <div class="cart2-img">
+                <img src="img/Rectangle 15.png" alt="">
+            </div>
+        </div>
+
+         <div class="cart2">
+            <div class="cart2-text">
+                <h2>Qovun va tarvuz sayliga marhamat, barchasi arzon narxlarda.</h2>
+                <a href="">Batafsil</a>
+            </div>
+            <div class="cart2-img">
+                <img src="img/Rectangle 17.png" alt="">
+            </div>
+        </div>
+    </div>
+     <div class="text">
+        <h2>AJOYIB CHEGIRMALAR</h2>
+    </div>
+     <div class="contener2">
+        <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 22.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>15 000 so’m / dona <br>
+                <s>8 500 so’m / kg</s>
+                </h2>
+                 <p>“Shmuchki” shokolad</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 23.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>24 000 so’m / kg <br>
+                    <s>2 200 so’m / kg</s>
+                </h2>
+                 <p>Muzqaymoq</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 24.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>32 000 so’m / kg <br>
+                    <s>13 900 so’m / kg</s>
+                </h2>
+                 <p>Ko’katlar</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 25.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>25 990 so’m / kg <br>
+                    <s>60 000 so’m / kg</s>
+                </h2>
+                 <p>Viko sok</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+    </div>
+   <div class="text">
+        <h2>TOP MAHSULOTLAR</h2>
+    </div>
+    <div class="contener2">
+        <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 30.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>32 990 so’m / kg</h2>
+                 <p>“To’xtaniyoz ota” kolbasalari</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 31.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>18 000 so’m / dona</h2>
+                 <p>Sariyog’</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 32.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>32 000 so’m / kg</h2>
+                 <p>Alanga guruch</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 33.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>25 990 so’m / kg</h2>
+                 <p>Mosh</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+    </div>
+    .  <div class="text">
+        <h2>SIZ UCHUN MAXSUS</h2>
+    </div>
+
+    <div class="contener2">
+        <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 38.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>6 500 so’m / dona</h2>
+                 <p>Nescafe Special</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 39.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>14 000 so’m / kg</h2>
+                 <p>Malayziya banan</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 40.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>6000 so’m / kg</h2>
+                 <p>Alanga guruch</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+
+         <div class="cart1">
+            <div class="cart-img">
+                <img src="img/Rectangle 41.png" alt="">
+            </div>
+            <div class="cart-text">
+                <h2>5 990 so’m / dona</h2>
+                 <p>Mosh</p>
+                 <button>Savatchaga qo’shish</button>
+            </div>
+        </div>
+    </div>
+    <div class="contener4">
+        <div class="box2">
+            <h2 class="nik">MOBIL ILOVAMIZNI YUKLAB OLING <br>VA TEZDA BUYURTMA QILING</h2>
+            <p class="nik2"> <b>“Inmart”</b>supermarketining mobil ilovasida yanada ko’proq <br> imkoniyatlarga ega bo’lishingiz mumkin </p>
+            <div class="scan">
+                <img src="img/image 188.png" alt="">
+                <div>
+                 <a href="" class="link">
+                    <i class="fa-brands fa-google-play"></i>
+                    <span>
+                        <p>GET IN ON</p>
+                        <h3>Googe Play</h3>
+                    </span>
+                 </a>
+                        <a href="" class="link">
+                    <i class="fa-brands fa-apple"></i>
+                    <span>
+                        <p>Dowload on the</p>
+                        <h3>App Store</h3>
+                    </span>
+                 </a>
+                </div>
+            </div>
+        </div>
+        <div class="call-img">
+            <img src="img/image 2074.png" alt="">
+        </div>
+    </div>
+    <div class="bottom">
+        <div>
+            <div>
+                <img src="img/Group.png" alt="">
+            </div>
+            <i class="fa-brands fa-telegram"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+        </div>
+        <ul>
+            <h3>Inmart</h3>
+            <li class="vili"><a href="">Biz haqimizda</a></li>
+            <li><a href="">Vakansiyalar</a></li>
+            <li><a href="">Mahsulotlar</a></li>
+            <li><a href="">Hamkor bo’lish</a></li>
+        </ul>
+        <ul>
+            <h3>Xaridorga yordam</h3>
+            <li class="vili"><a href="">Biz qanday ishlaymiz</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">To’lov tartibi</a></li>
+            <li><a href="">Yetkazib berish</a></li>
+        </ul>
+        <div class="end">
+            <h3>+998 99 896-66-66</h3>
+            <p>Ushbu qo’ng’iroq markazi orqali siz <br> o’zingizning qiziqtirgan savollarga <br>javob topishingiz mumkin.</p>
+        </div>
+    </div>
+</div>
+ <div class="bottom2">
+        <div>
+            <span class="spn">Barcha huquqlar himoyalangan</span>
+        </div>
+        <div class="end2">
+            <span class="spn">Ilovamizni yuklab oling</span>
+          <div class="end3">
+               <a href="" class="link">
+                    <i class="fa-brands fa-google-play"></i>
+                    <span>
+                        <p>GET IN ON</p>
+                        <h3>Googe Play</h3>
+                    </span>
+                 </a>
+                        <a href="" class="link">
+                    <i class="fa-brands fa-apple"></i>
+                    <span>
+                        <p>Dowload on the</p>
+                        <h3>App Store</h3>
+                    </span>
+                 </a>
+          </div>
+        </div>
+  
 </body>
 </html>
